// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge component tests dot, severity: basic 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#44e858",
        },
        {
          "borderRadius": 100,
          "height": 8,
          "width": 8,
        },
      ]
    }
  />
</View>
`;

exports[`Badge component tests dot, severity: danger 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#f47f77",
        },
        {
          "borderRadius": 100,
          "height": 8,
          "width": 8,
        },
      ]
    }
  />
</View>
`;

exports[`Badge component tests dot, severity: info 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#77baf4",
        },
        {
          "borderRadius": 100,
          "height": 8,
          "width": 8,
        },
      ]
    }
  />
</View>
`;

exports[`Badge component tests dot, severity: success 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#77f48a",
        },
        {
          "borderRadius": 100,
          "height": 8,
          "width": 8,
        },
      ]
    }
  />
</View>
`;

exports[`Badge component tests dot, severity: warning 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#facb75",
        },
        {
          "borderRadius": 100,
          "height": 8,
          "width": 8,
        },
      ]
    }
  />
</View>
`;

exports[`Badge component tests severity: basic 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#44e858",
        },
        {
          "borderRadius": 100,
          "height": 24,
          "justifyContent": "center",
          "paddingHorizontal": 8,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#2b2e33",
            "fontFamily": "TT Fellows",
            "fontSize": 12,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          },
          {
            "minWidth": undefined,
          },
        ]
      }
    >
      12
    </Text>
  </View>
  <View
    accessibilityElementsHidden={true}
    importantForAccessibility="no-hide-descendants"
    style={
      {
        "flexDirection": "row",
        "height": 0,
        "position": "absolute",
        "width": 750,
      }
    }
  >
    <View
      collapsable={false}
    >
      <Text
        numberOfLines={1}
        onLayout={[Function]}
        style={
          {
            "color": "#2b2e33",
            "fontFamily": "TT Fellows",
            "fontSize": 12,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          }
        }
      >
        12
      </Text>
    </View>
  </View>
</View>
`;

exports[`Badge component tests severity: basic 2`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#77baf4",
        },
        {
          "borderRadius": 100,
          "height": 24,
          "justifyContent": "center",
          "paddingHorizontal": 8,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#2b2e33",
            "fontFamily": "TT Fellows",
            "fontSize": 12,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          },
          {
            "minWidth": undefined,
          },
        ]
      }
    >
      12
    </Text>
  </View>
  <View
    accessibilityElementsHidden={true}
    importantForAccessibility="no-hide-descendants"
    style={
      {
        "flexDirection": "row",
        "height": 0,
        "position": "absolute",
        "width": 750,
      }
    }
  >
    <View
      collapsable={false}
    >
      <Text
        numberOfLines={1}
        onLayout={[Function]}
        style={
          {
            "color": "#2b2e33",
            "fontFamily": "TT Fellows",
            "fontSize": 12,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          }
        }
      >
        12
      </Text>
    </View>
  </View>
</View>
`;

exports[`Badge component tests severity: basic 3`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#77f48a",
        },
        {
          "borderRadius": 100,
          "height": 24,
          "justifyContent": "center",
          "paddingHorizontal": 8,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#2b2e33",
            "fontFamily": "TT Fellows",
            "fontSize": 12,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          },
          {
            "minWidth": undefined,
          },
        ]
      }
    >
      12
    </Text>
  </View>
  <View
    accessibilityElementsHidden={true}
    importantForAccessibility="no-hide-descendants"
    style={
      {
        "flexDirection": "row",
        "height": 0,
        "position": "absolute",
        "width": 750,
      }
    }
  >
    <View
      collapsable={false}
    >
      <Text
        numberOfLines={1}
        onLayout={[Function]}
        style={
          {
            "color": "#2b2e33",
            "fontFamily": "TT Fellows",
            "fontSize": 12,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          }
        }
      >
        12
      </Text>
    </View>
  </View>
</View>
`;

exports[`Badge component tests severity: basic 4`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#facb75",
        },
        {
          "borderRadius": 100,
          "height": 24,
          "justifyContent": "center",
          "paddingHorizontal": 8,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#2b2e33",
            "fontFamily": "TT Fellows",
            "fontSize": 12,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          },
          {
            "minWidth": undefined,
          },
        ]
      }
    >
      12
    </Text>
  </View>
  <View
    accessibilityElementsHidden={true}
    importantForAccessibility="no-hide-descendants"
    style={
      {
        "flexDirection": "row",
        "height": 0,
        "position": "absolute",
        "width": 750,
      }
    }
  >
    <View
      collapsable={false}
    >
      <Text
        numberOfLines={1}
        onLayout={[Function]}
        style={
          {
            "color": "#2b2e33",
            "fontFamily": "TT Fellows",
            "fontSize": 12,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          }
        }
      >
        12
      </Text>
    </View>
  </View>
</View>
`;

exports[`Badge component tests severity: basic 5`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#f47f77",
        },
        {
          "borderRadius": 100,
          "height": 24,
          "justifyContent": "center",
          "paddingHorizontal": 8,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#2b2e33",
            "fontFamily": "TT Fellows",
            "fontSize": 12,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          },
          {
            "minWidth": undefined,
          },
        ]
      }
    >
      12
    </Text>
  </View>
  <View
    accessibilityElementsHidden={true}
    importantForAccessibility="no-hide-descendants"
    style={
      {
        "flexDirection": "row",
        "height": 0,
        "position": "absolute",
        "width": 750,
      }
    }
  >
    <View
      collapsable={false}
    >
      <Text
        numberOfLines={1}
        onLayout={[Function]}
        style={
          {
            "color": "#2b2e33",
            "fontFamily": "TT Fellows",
            "fontSize": 12,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          }
        }
      >
        12
      </Text>
    </View>
  </View>
</View>
`;

exports[`Badge component tests severity: default 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#44e858",
        },
        {
          "borderRadius": 100,
          "height": 24,
          "justifyContent": "center",
          "paddingHorizontal": 8,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "color": "#2b2e33",
            "fontFamily": "TT Fellows",
            "fontSize": 12,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          },
          {
            "minWidth": undefined,
          },
        ]
      }
    >
      12
    </Text>
  </View>
  <View
    accessibilityElementsHidden={true}
    importantForAccessibility="no-hide-descendants"
    style={
      {
        "flexDirection": "row",
        "height": 0,
        "position": "absolute",
        "width": 750,
      }
    }
  >
    <View
      collapsable={false}
    >
      <Text
        numberOfLines={1}
        onLayout={[Function]}
        style={
          {
            "color": "#2b2e33",
            "fontFamily": "TT Fellows",
            "fontSize": 12,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          }
        }
      >
        12
      </Text>
    </View>
  </View>
</View>
`;

exports[`Badge component tests with custom style 1`] = `
<View
  style={
    [
      {
        "alignItems": "flex-start",
      },
      {
        "margin": 10,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#44e858",
        },
        {
          "borderRadius": 100,
          "height": 8,
          "width": 8,
        },
      ]
    }
  />
</View>
`;
